# CredTech

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_realtime_pipeline.sh
NLP_pipeline/sentiment/: sentiment_analysis.py
data/: engineered_features.csv  test_features.csv
data_ingestion/: claude_desktop_config.json
data_ingestion/structured_data/: README.md  api.py  candlestick_api.py  config.py  enhanced_api.py  fred.py  init.sql  jobs.py  models.py  news_service.py  requirements.txt  sample.env  sec.py  socket_server.py  start.sh  storage.py  test_mcp.py  utils.py  yf.py  yf_2.py
data_ingestion/structured_data/sources/: fred_series.py  sec_edgar.py  yahoo_finance.py  yahoo_finance_features.py
data_ingestion/structured_data/yf_go/: bench.go  go.mod  main.go  test_client.go
data_ingestion/unstructured_data/: go.mod  go.sum  main.go  test.go  test.py
data_ingestion/unstructured_data/config/: config.go
data_ingestion/unstructured_data/data/: sample.json
data_ingestion/unstructured_data/ingestion/: finnhub.go  manager.go  newsapi.go  reuters.go  sources.go  yahoo.go
data_ingestion/unstructured_sm/: api_sentiment.py  main.py  master.py  sample.json  sentiment.py
feature_engineering/: AcademicFeatureEngineer.py  README.md  __init__.py  academic_features.py
frontend/: README.md  package-lock.json  package.json
model_training/: ModelValidation.py  README.md  cds_models.py  cds_prediction_model.py
ref/: package-lock.json  package.json
research/: fred.ipynb  go.mod  go.sum  sec.ipynb  yf.go
(+709 files in other folders)
