[project]
name = "credtech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-sqlite3>=0.0.1",
    "dotenv>=0.9.9",
    "eventlet>=0.40.2",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "finnhub-python>=2.4.24",
    "linearmodels>=6.1",
    "matplotlib>=3.10.5",
    "mcp-yfinance-server>=0.1.0",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-socketio>=5.13.0",
    "regex>=2025.7.34",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sec-api>=1.0.32",
    "sqlalchemy>=2.0.43",
    "statsmodels>=0.14.5",
    "uvicorn>=0.35.0",
    "websocket>=0.2.1",
    "yfinance>=0.2.65",
]
